# verdicts

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  ECOSYSTEM.md  LICENSE  README.md  SPEC.md
.beads.archived/: metadata.json
.github/workflows/: ci.yml  release.yml
lib/python/: pyproject.toml
lib/python/nthlayer_learn/: __init__.py  __main__.py  cli.py  core.py  models.py  retrospective.py  serialise.py  sqlite_store.py  store.py
lib/python/tests/: test_cli.py  test_core.py  test_models.py  test_retrospective.py  test_serialise.py  test_sqlite_concurrency.py  test_store.py
lib/python/verdict/: __init__.py  core.py  models.py  serialise.py  store.py
schema/: verdict-types.md  verdict.json  verdict.yaml
