[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nthlayer-learn"
version = "0.1.0"
description = "The atomic unit of AI judgment — structured records for tracking AI decision quality"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["ai", "judgment", "evaluation", "quality", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
nthlayer-learn = "nthlayer_learn.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.8"]
